[package]
name = "druid-expo"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.21"
prometheus = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
